--- a/src/templates/Home/styles.css
+++ b/src/templates/Home/styles.css
@@ -6,8 +6,16 @@
   padding: 30px;
 }
 
-button-container {
+.button-container {
   min-width: none;height: 60px;
   display: flex;
   align-items: flex-end;
+}
+
+.search-container {
+  margin-bottom: 30px;
+}
+
+.search-container h1{
+  margin-bottom: 30px;
 }
